--- a/client/src/components/ui/NestedTable/NestedTable.scss
+++ b/client/src/components/ui/NestedTable/NestedTable.scss
@@ -2,15 +2,16 @@
     cursor: default;
     user-select: none;
 
-    &:not(:last-child) {
-        border-bottom: 1px solid rgba(20, 20, 19, 0.08);
-    }
+    border-bottom: 1px solid rgba(20, 20, 19, 0.08);
 
     &_content {
         display: grid;
         align-items: center;
+
         height: 4em;
         padding: 0 2em 0 1.5em;
+
+        transition: background-color .2s;
 
         // TODO: REMOVE HARD SETTING
         grid-template-columns: 19% repeat(12, 1fr);
@@ -18,6 +19,9 @@
 
     &_control {
         flex: 0.7em 0 0;
+
+        transition: transform .2s;
+        transform: rotate(-90deg);
 
         img {
             width: 100%;
@@ -28,17 +32,12 @@
         display: flex;
         align-items: center;
         gap: .8em;
-
-        .NestedTableRow_control {
-            transition: transform .2s;
-            transform: rotate(-90deg);
-        }
     }
 
     &_labels {
-        text-align: right;
         font-variation-settings: 'wght' 320;
-        color: rgba(20, 20, 19, 0.6);
+        color: var(--color-opacity);
+        text-align: right;
     }
 
     &_value {
@@ -46,21 +45,19 @@
         letter-spacing: 0.04em;
     }
 
-    &.expanded {
-        .NestedTableRow_control {
-            transform: rotate(0deg);
-        }
-    }
-
-    &.expandable {
+    &._expandable {
         cursor: pointer;
 
         .NestedTableRow_content {
-            transition: background-color .2s;
-
             &:hover {
                 background-color: rgba(20, 20, 19, 0.04);
             }
+        }
+    }
+
+    &._expanded {
+        .NestedTableRow_control {
+            transform: rotate(0deg);
         }
     }
 }
