--- a/client/src/components/ui/StackedBarChart/StackedBarChart.scss
+++ b/client/src/components/ui/StackedBarChart/StackedBarChart.scss
@@ -13,6 +13,7 @@
         display: flex;
 
         --gap: 1.5em;
+
         gap: var(--gap);
         padding: 0 var(--gap);
 
@@ -26,8 +27,8 @@
                 width: 100%;
 
                 font-size: .85em;
+                color: var(--color-opacity);
                 text-align: center;
-                color: rgba(20, 20, 19, 0.6);
             }
 
             &_values {
@@ -56,6 +57,7 @@
     .Line {
         position: absolute;
         width: 100%;
+
         border-bottom: 1px dashed rgba(20, 20, 19, 0.16);
 
         &_label {
@@ -66,9 +68,9 @@
             padding-right: .7em;
 
             font-size: .85em;
+            color: var(--color-opacity);
             text-align: right;
 
-            color: rgba(20, 20, 19, 0.6);
             background: white;
         }
     }
@@ -76,9 +78,8 @@
     .DataKeys {
         display: flex;
         justify-content: center;
-        gap: 1em;
-
         align-items: center;
+        gap: 1em;
 
         .DataKey {
             margin-top: 4em;
@@ -88,11 +89,12 @@
             gap: .3em;
 
             font-size: .85em;
-            color: rgba(20, 20, 19, 0.6);
+            color: var(--color-opacity);
 
             &_color {
                 width: .7em;
                 aspect-ratio: 1;
+
                 border-radius: 0.2em;
             }
         }
