--- a/client/src/components/ui/StackedBarChart/StackedBarChart.scss
+++ b/client/src/components/ui/StackedBarChart/StackedBarChart.scss
@@ -50,6 +50,10 @@
                     border-top-left-radius: var(--border-radius);
                     border-top-right-radius: var(--border-radius);
                 }
+
+                &_content {
+                    height: 100%;
+                }
             }
         }
     }
