--- a/client/src/components/ui/NestedTable/NestedTable.scss
+++ b/client/src/components/ui/NestedTable/NestedTable.scss
@@ -2,18 +2,28 @@
     cursor: default;
     user-select: none;
 
-    border-bottom: 1px solid rgba(20, 20, 19, 0.08);
+    outline: .5px solid rgba(20, 20, 19, 0.08);
 
     &_content {
         display: grid;
         align-items: center;
 
         height: 4em;
-        padding: 0 2em 0 1.5em;
+        padding: 0 2.5em 0 1.5em;
 
         transition: background-color .2s;
 
-        grid-template-columns: 19% repeat(var(--table-columns-count), 1fr);
+        --min-cell-width: 5em;
+
+        grid-template-columns: max(15em, 10vw) repeat(
+            var(--table-columns-count),
+            minmax(var(--min-cell-width), 1fr)
+        );
+        grid-gap: 1em;
+
+        @media (max-width: 900) {
+            --min-cell-width: 3em;
+        }
     }
 
     &_control {
@@ -37,6 +47,8 @@
         font-variation-settings: 'wght' 320;
         color: var(--color-opacity);
         text-align: right;
+
+        white-space: nowrap;
     }
 
     &_value {
