--- a/client/src/core/App.scss
+++ b/client/src/core/App.scss
@@ -39,6 +39,21 @@ h1 {
     flex-direction: column;
     gap: 1em;
 
+    &_card_wrapper {
+        position: relative;
+        overflow: hidden;
+
+        &:after {
+            content: "";
+            position: absolute;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 2.5em;
+            background: linear-gradient(to right, transparent, #FFFFFF88 50%, white);
+        }
+    }
+
     &_card {
         position: relative;
 
@@ -47,6 +62,8 @@ h1 {
 
         display: flex;
         align-items: center;
+
+        overflow: scroll;
 
         & > * {
             flex: 1;
@@ -59,5 +76,6 @@ h1 {
         text-align: center;
 
         user-select: none;
+
     }
 }
