Minor style fixes

--- a/client/src/core/App.scss
+++ b/client/src/core/App.scss
@@ -75,6 +75,9 @@ h1 {
         font-weight: bold;
         text-align: center;
 
+        margin-left: 1em;
+        margin-right: 1em;
+
         user-select: none;
 
     }
